{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 200,
  "lineage": "b1716310-f553-3aab-b764-af48406975a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:security-group/sg-05c833319d11b991c",
            "description": "Allow PostgreSQL access from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017cda970041870f9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-05c833319d11b991c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017cda970041870f9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloudtasks-rds-sg",
            "name_prefix": "",
            "owner_id": "519321091352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Project": "cloudtasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:security-group/sg-0fbdbf23f5afad96d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0fbdbf23f5afad96d",
            "ingress": [],
            "name": "cloudtasks-cluster-cluster-2026051118260707200000000c",
            "name_prefix": "cloudtasks-cluster-cluster-",
            "owner_id": "519321091352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudtasks-cluster-cluster",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-cluster-cluster",
              "Project": "cloudtasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:security-group/sg-017cda970041870f9",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-017cda970041870f9",
            "ingress": [],
            "name": "cloudtasks-cluster-node-2026051118260539280000000a",
            "name_prefix": "cloudtasks-cluster-node-",
            "owner_id": "519321091352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudtasks-cluster-node",
              "Project": "cloudtasks",
              "kubernetes.io/cluster/cloudtasks-cluster": "owned"
            },
            "tags_all": {
              "Name": "cloudtasks-cluster-node",
              "Project": "cloudtasks",
              "kubernetes.io/cluster/cloudtasks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-34780672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fbdbf23f5afad96d",
            "security_group_rule_id": "sgr-0302c6ccf54454ab2",
            "self": false,
            "source_security_group_id": "sg-017cda970041870f9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-26500509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-08bf4f29b3bf17a10",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1344784977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-02aef9b1e0feadcf0",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3110111348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-05da6f6affdb4f2ce",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1881337826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-06fdb715b87be1f17",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1669256131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-04e601e84daba9ce4",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-132112392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-0a6b99903b5dbe872",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1915176678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-086421e65f9034c2f",
            "self": false,
            "source_security_group_id": "sg-0fbdbf23f5afad96d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2621173792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-08868665c9c22d677",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2153374755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-018895e094b1c2cb3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-604391372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-017cda970041870f9",
            "security_group_rule_id": "sgr-050f7512484780ddc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:network-acl/acl-05674136967f5bbd4",
            "default_network_acl_id": "acl-05674136967f5bbd4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05674136967f5bbd4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "519321091352",
            "subnet_ids": [
              "subnet-0324a4996ae21b074",
              "subnet-058401892e4101721",
              "subnet-07d6f85521e114a34",
              "subnet-085622fe24bab326c",
              "subnet-0f55cb01aa59040ec"
            ],
            "tags": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:route-table/rtb-0844f305bb55055fb",
            "default_route_table_id": "rtb-0844f305bb55055fb",
            "id": "rtb-0844f305bb55055fb",
            "owner_id": "519321091352",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:security-group/sg-08b1bad5081da3fbd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08b1bad5081da3fbd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "519321091352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-default",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e560774bfd8cbc4",
            "arn": "arn:aws:ec2:us-east-1:519321091352:elastic-ip/eipalloc-04e560774bfd8cbc4",
            "domain": "vpc",
            "id": "eipalloc-04e560774bfd8cbc4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-246-186.compute-1.amazonaws.com",
            "public_ip": "54.84.246.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudtasks-vpc-us-east-1a",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-us-east-1a",
              "Project": "cloudtasks"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:internet-gateway/igw-09d629af046b9a342",
            "id": "igw-09d629af046b9a342",
            "owner_id": "519321091352",
            "tags": {
              "Name": "cloudtasks-vpc",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e560774bfd8cbc4",
            "association_id": "eipassoc-024d6ee060b5eebb8",
            "connectivity_type": "public",
            "id": "nat-0a4a675dabdbe1403",
            "network_interface_id": "eni-0b643cac88231565e",
            "private_ip": "10.0.1.192",
            "public_ip": "54.84.246.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085622fe24bab326c",
            "tags": {
              "Name": "cloudtasks-vpc-us-east-1a",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-us-east-1a",
              "Project": "cloudtasks"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b743276c0dc15b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4a675dabdbe1403",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b743276c0dc15b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d629af046b9a342",
            "id": "r-rtb-059cf451da505113b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059cf451da505113b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:route-table/rtb-00b743276c0dc15b2",
            "id": "rtb-00b743276c0dc15b2",
            "owner_id": "519321091352",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudtasks-vpc-private",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-private",
              "Project": "cloudtasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:route-table/rtb-059cf451da505113b",
            "id": "rtb-059cf451da505113b",
            "owner_id": "519321091352",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudtasks-vpc-public",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-public",
              "Project": "cloudtasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adfc873d44ac92e0",
            "route_table_id": "rtb-00b743276c0dc15b2",
            "subnet_id": "subnet-0f1d3b8030690c147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162f3ac3e5997095",
            "route_table_id": "rtb-00b743276c0dc15b2",
            "subnet_id": "subnet-07d6f85521e114a34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0369ae2a94985372f",
            "route_table_id": "rtb-00b743276c0dc15b2",
            "subnet_id": "subnet-0324a4996ae21b074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbf5ba518b49e624",
            "route_table_id": "rtb-059cf451da505113b",
            "subnet_id": "subnet-085622fe24bab326c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0107d7c05013cd5a6",
            "route_table_id": "rtb-059cf451da505113b",
            "subnet_id": "subnet-0f55cb01aa59040ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03695778d6461dc87",
            "route_table_id": "rtb-059cf451da505113b",
            "subnet_id": "subnet-058401892e4101721"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-0f1d3b8030690c147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1d3b8030690c147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-private-us-east-1a",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-private-us-east-1a",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-07d6f85521e114a34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d6f85521e114a34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-private-us-east-1b",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-private-us-east-1b",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-0324a4996ae21b074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0324a4996ae21b074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-private-us-east-1c",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-private-us-east-1c",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-085622fe24bab326c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085622fe24bab326c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-public-us-east-1a",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-public-us-east-1a",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-0f55cb01aa59040ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f55cb01aa59040ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-public-us-east-1b",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-public-us-east-1b",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:subnet/subnet-058401892e4101721",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058401892e4101721",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "519321091352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudtasks-vpc-public-us-east-1c",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc-public-us-east-1c",
              "Project": "cloudtasks"
            },
            "vpc_id": "vpc-0951a76aaf738bcfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519321091352:vpc/vpc-0951a76aaf738bcfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05674136967f5bbd4",
            "default_route_table_id": "rtb-0844f305bb55055fb",
            "default_security_group_id": "sg-08b1bad5081da3fbd",
            "dhcp_options_id": "dopt-0740e8263cb15b13c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0951a76aaf738bcfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0844f305bb55055fb",
            "owner_id": "519321091352",
            "tags": {
              "Name": "cloudtasks-vpc",
              "Project": "cloudtasks"
            },
            "tags_all": {
              "Name": "cloudtasks-vpc",
              "Project": "cloudtasks"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}